Implemented extraction of structured data from unstructured text using regex

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
@@ -14,105 +14,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Order ID       Customer                 Email           Date  \\\n",
-      "0    23984       John Doe  john.doe@example.com  April 4, 2024   \n",
-      "1    23985  Alice Johnson   alice.j@example.com  April 5, 2024   \n",
+      "test_empty_input (__main__.TestDataExtraction) ... FAIL\n",
+      "test_malformed_text (__main__.TestDataExtraction) ... FAIL\n",
+      "test_missing_customer (__main__.TestDataExtraction) ... ok\n",
+      "test_regular_data (__main__.TestDataExtraction) ... ok\n",
       "\n",
-      "                              Product  \\\n",
-      "0       Wireless Mouse - Model WXM123   \n",
-      "1  Mechanical Keyboard - Model KBD456   \n",
+      "======================================================================\n",
+      "FAIL: test_empty_input (__main__.TestDataExtraction)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_673/386450541.py\", line 79, in test_empty_input\n",
+      "    self.assertEqual(df.shape[0], 0)  # No orders should be extracted\n",
+      "AssertionError: 1 != 0\n",
       "\n",
-      "                                            Feedback          Contact  \n",
-      "0  The mouse works great, but sometimes the scrol...  +1-234-567-8900  \n",
-      "1     Keys are very responsive. Love the RGB lights!  +1-678-910-1122  \n"
+      "======================================================================\n",
+      "FAIL: test_malformed_text (__main__.TestDataExtraction)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_673/386450541.py\", line 87, in test_malformed_text\n",
+      "    self.assertIsNone(df.iloc[0]['Email'])  # Email should be None due to malformed format\n",
+      "AssertionError: 'broken_email_format' is not None\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.008s\n",
+      "\n",
+      "FAILED (failures=2)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Order ID</th>\n",
-       "      <th>Customer</th>\n",
-       "      <th>Email</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Product</th>\n",
-       "      <th>Feedback</th>\n",
-       "      <th>Contact</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23984</td>\n",
-       "      <td>John Doe</td>\n",
-       "      <td>john.doe@example.com</td>\n",
-       "      <td>April 4, 2024</td>\n",
-       "      <td>Wireless Mouse - Model WXM123</td>\n",
-       "      <td>The mouse works great, but sometimes the scrol...</td>\n",
-       "      <td>+1-234-567-8900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>23985</td>\n",
-       "      <td>Alice Johnson</td>\n",
-       "      <td>alice.j@example.com</td>\n",
-       "      <td>April 5, 2024</td>\n",
-       "      <td>Mechanical Keyboard - Model KBD456</td>\n",
-       "      <td>Keys are very responsive. Love the RGB lights!</td>\n",
-       "      <td>+1-678-910-1122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Order ID       Customer                 Email           Date  \\\n",
-       "0    23984       John Doe  john.doe@example.com  April 4, 2024   \n",
-       "1    23985  Alice Johnson   alice.j@example.com  April 5, 2024   \n",
-       "\n",
-       "                              Product  \\\n",
-       "0       Wireless Mouse - Model WXM123   \n",
-       "1  Mechanical Keyboard - Model KBD456   \n",
-       "\n",
-       "                                            Feedback          Contact  \n",
-       "0  The mouse works great, but sometimes the scrol...  +1-234-567-8900  \n",
-       "1     Keys are very responsive. Love the RGB lights!  +1-678-910-1122  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import re\n",
     "import pandas as pd\n",
+    "import unittest\n",
     "\n",
-    "# Unstructured text block\n",
+    "# Unstructured text block (sample)\n",
     "unstructured_text = \"\"\"\n",
     "Order ID: 23984\n",
     "Customer: John Doe\n",
@@ -131,9 +73,8 @@
     "Contact: +1-678-910-1122\n",
     "\"\"\"\n",
     "\n",
-    "# Function to extract structured data\n",
+    "# Function to extract structured data from unstructured text\n",
     "def extract_structured_data(text_block):\n",
-    "    # Regular expression patterns to extract specific fields\n",
     "    pattern_dict = {\n",
     "        \"Order ID\": r\"Order ID:\\s*(\\d+)\",\n",
     "        \"Customer\": r\"Customer:\\s*(.+)\",\n",
@@ -144,28 +85,62 @@
     "        \"Contact\": r\"Contact:\\s*(.+)\",\n",
     "    }\n",
     "    \n",
-    "    # Split text into separate orders\n",
     "    orders = text_block.strip().split(\"\\n\\n\")\n",
     "    extracted_data = []\n",
     "\n",
     "    for order in orders:\n",
     "        order_data = {}\n",
     "        for key, pattern in pattern_dict.items():\n",
-    "            match = re.search(pattern, order)\n",
-    "            order_data[key] = match.group(1).strip() if match else None  # Safeguard for missing fields\n",
+    "            try:\n",
+    "                match = re.search(pattern, order)\n",
+    "                order_data[key] = match.group(1).strip() if match else None  # Safeguard for missing fields\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error extracting {key}: {e}\")\n",
+    "                order_data[key] = None\n",
     "        extracted_data.append(order_data)\n",
     "\n",
-    "    # Return as a pandas DataFrame for easier reading\n",
     "    return pd.DataFrame(extracted_data)\n",
     "\n",
-    "# Extract and display structured data as DataFrame\n",
-    "df_structured = extract_structured_data(unstructured_text)\n",
+    "# Unit Test Class\n",
+    "class TestDataExtraction(unittest.TestCase):\n",
+    "    \n",
+    "    # Test with regular structured data\n",
+    "    def test_regular_data(self):\n",
+    "        df = extract_structured_data(unstructured_text)\n",
+    "        self.assertEqual(df.shape[0], 2)  # Expecting 2 rows\n",
+    "        self.assertIn(\"Order ID\", df.columns)\n",
+    "        self.assertIn(\"Customer\", df.columns)\n",
+    "        self.assertIn(\"Email\", df.columns)\n",
     "\n",
-    "# Display output in the required format\n",
-    "print(df_structured)\n",
+    "    # Test with missing customer field\n",
+    "    def test_missing_customer(self):\n",
+    "        missing_customer_text = \"\"\"\n",
+    "        Order ID: 23986\n",
+    "        Email: test@example.com\n",
+    "        Date: May 1, 2024\n",
+    "        Product: External Hard Drive\n",
+    "        Feedback: Works fine, but a bit slow.\n",
+    "        Contact: +1-800-555-5555\n",
+    "        \"\"\"\n",
+    "        df = extract_structured_data(missing_customer_text)\n",
+    "        self.assertIsNone(df.iloc[0]['Customer'])  # Customer should be None\n",
+    "    \n",
+    "    # Test with empty input (edge case)\n",
+    "    def test_empty_input(self):\n",
+    "        df = extract_structured_data(\"\")\n",
+    "        self.assertEqual(df.shape[0], 0)  # No orders should be extracted\n",
     "\n",
-    "# Ensure the DataFrame has the correct format and output as required by the evaluator\n",
-    "df_structured\n"
+    "    # Test with malformed text\n",
+    "    def test_malformed_text(self):\n",
+    "        malformed_text = \"\"\"\n",
+    "        Order ID: 23987; Missing delimiter here; Email: broken_email_format\n",
+    "        \"\"\"\n",
+    "        df = extract_structured_data(malformed_text)\n",
+    "        self.assertIsNone(df.iloc[0]['Email'])  # Email should be None due to malformed format\n",
+    "\n",
+    "# Run the unit tests\n",
+    "if __name__ == \"__main__\":\n",
+    "    unittest.main(argv=[''], verbosity=2, exit=False)\n"
    ]
   }
  ],
