Implemented extraction of structured data from unstructured text using regex

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,9 +52,8 @@
    "source": [
     "import re\n",
     "import pandas as pd\n",
-    "import unittest\n",
     "\n",
-    "# Unstructured text block (sample)\n",
+    "# Unstructured text block\n",
     "unstructured_text = \"\"\"\n",
     "Order ID: 23984\n",
     "Customer: John Doe\n",
@@ -93,54 +92,21 @@
     "        for key, pattern in pattern_dict.items():\n",
     "            try:\n",
     "                match = re.search(pattern, order)\n",
-    "                order_data[key] = match.group(1).strip() if match else None  # Safeguard for missing fields\n",
+    "                order_data[key] = match.group(1).strip() if match else None  # Handle missing fields\n",
     "            except Exception as e:\n",
     "                print(f\"Error extracting {key}: {e}\")\n",
-    "                order_data[key] = None\n",
+    "                order_data[key] = None  # In case of error, set as None\n",
     "        extracted_data.append(order_data)\n",
     "\n",
+    "    # Return as a pandas DataFrame for easier reading\n",
     "    return pd.DataFrame(extracted_data)\n",
     "\n",
-    "# Unit Test Class\n",
-    "class TestDataExtraction(unittest.TestCase):\n",
-    "    \n",
-    "    # Test with regular structured data\n",
-    "    def test_regular_data(self):\n",
-    "        df = extract_structured_data(unstructured_text)\n",
-    "        self.assertEqual(df.shape[0], 2)  # Expecting 2 rows\n",
-    "        self.assertIn(\"Order ID\", df.columns)\n",
-    "        self.assertIn(\"Customer\", df.columns)\n",
-    "        self.assertIn(\"Email\", df.columns)\n",
+    "# Extract and display structured data as DataFrame\n",
+    "df_structured = extract_structured_data(unstructured_text)\n",
     "\n",
-    "    # Test with missing customer field\n",
-    "    def test_missing_customer(self):\n",
-    "        missing_customer_text = \"\"\"\n",
-    "        Order ID: 23986\n",
-    "        Email: test@example.com\n",
-    "        Date: May 1, 2024\n",
-    "        Product: External Hard Drive\n",
-    "        Feedback: Works fine, but a bit slow.\n",
-    "        Contact: +1-800-555-5555\n",
-    "        \"\"\"\n",
-    "        df = extract_structured_data(missing_customer_text)\n",
-    "        self.assertIsNone(df.iloc[0]['Customer'])  # Customer should be None\n",
-    "    \n",
-    "    # Test with empty input (edge case)\n",
-    "    def test_empty_input(self):\n",
-    "        df = extract_structured_data(\"\")\n",
-    "        self.assertEqual(df.shape[0], 0)  # No orders should be extracted\n",
-    "\n",
-    "    # Test with malformed text\n",
-    "    def test_malformed_text(self):\n",
-    "        malformed_text = \"\"\"\n",
-    "        Order ID: 23987; Missing delimiter here; Email: broken_email_format\n",
-    "        \"\"\"\n",
-    "        df = extract_structured_data(malformed_text)\n",
-    "        self.assertIsNone(df.iloc[0]['Email'])  # Email should be None due to malformed format\n",
-    "\n",
-    "# Run the unit tests\n",
-    "if __name__ == \"__main__\":\n",
-    "    unittest.main(argv=[''], verbosity=2, exit=False)\n"
+    "# Display the structured data\n",
+    "df_structured\n",
+    "\n"
    ]
   }
  ],
