Implemented ML model to predict data quality issues with feature engineering and evaluation

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_3.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_3.ipynb
@@ -15,14 +15,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Data generated successfully.\n",
+      "INFO: Data labeled for quality issues.\n",
+      "INFO: Features engineered successfully.\n",
+      "INFO: Model training complete.\n",
+      "INFO: === Classification Report ===\n",
+      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "INFO: === Confusion Matrix ===\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Classification Report ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.00      0.00      0.00         0\n",
@@ -32,22 +49,8 @@
       "   macro avg       0.50      0.17      0.25         3\n",
       "weighted avg       1.00      0.33      0.50         3\n",
       "\n",
-      "\n",
-      "=== Confusion Matrix ===\n",
       "[[0 0]\n",
       " [2 1]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     },
     {
@@ -64,69 +67,75 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import logging\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
-    "# Step 1: Generate Sample Data with Data Quality Issues\n",
+    "# Setup logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(levelname)s: %(message)s')\n",
+    "\n",
+    "# Step 1: Generate data\n",
     "def generate_data():\n",
     "    try:\n",
-    "        df = pd.DataFrame({\n",
+    "        data = {\n",
     "            'age': [25, np.nan, 22, 45, 38, -5, 999, 30, 44, 35],\n",
     "            'salary': [50000, 60000, np.nan, 70000, -1000, 90000, 120000, 45000, None, 80000],\n",
     "            'department': ['HR', 'IT', None, 'Finance', 'HR', 'IT', 'HR', 'Finance', 'HR', None]\n",
-    "        })\n",
+    "        }\n",
+    "        df = pd.DataFrame(data)\n",
+    "        logging.info(\"Data generated successfully.\")\n",
     "        return df\n",
     "    except Exception as e:\n",
-    "        print(f\"Error generating data: {e}\")\n",
+    "        logging.error(f\"Error generating data: {e}\")\n",
     "        return pd.DataFrame()\n",
     "\n",
-    "# Step 2: Label Rows with Data Quality Issues\n",
+    "# Step 2: Label rows with data quality issues\n",
     "def label_data(df):\n",
-    "    def has_quality_issue(row):\n",
-    "        if pd.isnull(row['age']) or pd.isnull(row['salary']) or pd.isnull(row['department']):\n",
-    "            return 1\n",
-    "        if row['age'] < 0 or row['age'] > 100:\n",
-    "            return 1\n",
-    "        if row['salary'] < 0:\n",
-    "            return 1\n",
-    "        return 0\n",
-    "    df['quality_issue'] = df.apply(has_quality_issue, axis=1)\n",
+    "    df['quality_issue'] = (\n",
+    "        df['age'].isnull() |\n",
+    "        df['salary'].isnull() |\n",
+    "        df['department'].isnull() |\n",
+    "        (df['age'] < 0) |\n",
+    "        (df['age'] > 100) |\n",
+    "        (df['salary'] < 0)\n",
+    "    ).astype(int)\n",
+    "    logging.info(\"Data labeled for quality issues.\")\n",
     "    return df\n",
     "\n",
-    "# Step 3: Feature Engineering\n",
+    "# Step 3: Feature engineering (vectorized)\n",
     "def engineer_features(df):\n",
+    "    df = df.copy()\n",
     "    df['age_null'] = df['age'].isnull().astype(int)\n",
     "    df['salary_null'] = df['salary'].isnull().astype(int)\n",
     "    df['dept_null'] = df['department'].isnull().astype(int)\n",
     "    df['age_out_of_range'] = ((df['age'] < 0) | (df['age'] > 100)).astype(int)\n",
     "    df['salary_negative'] = (df['salary'] < 0).astype(int)\n",
+    "    logging.info(\"Features engineered successfully.\")\n",
     "    return df\n",
     "\n",
-    "# Step 4: Train and Evaluate a Model\n",
-    "def train_model(df):\n",
-    "    features = ['age_null', 'salary_null', 'dept_null', 'age_out_of_range', 'salary_negative']\n",
-    "    target = 'quality_issue'\n",
-    "\n",
-    "    X = df[features]\n",
-    "    y = df[target]\n",
-    "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
+    "# Step 4: Model training\n",
+    "def train_model(X_train, y_train):\n",
     "    model = RandomForestClassifier(random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
+    "    logging.info(\"Model training complete.\")\n",
+    "    return model\n",
     "\n",
-    "    print(\"=== Classification Report ===\")\n",
+    "# Step 5: Model evaluation\n",
+    "def evaluate_model(model, X_test, y_test, feature_names):\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    logging.info(\"=== Classification Report ===\")\n",
     "    print(classification_report(y_test, y_pred))\n",
-    "    print(\"\\n=== Confusion Matrix ===\")\n",
+    "    \n",
+    "    logging.info(\"=== Confusion Matrix ===\")\n",
     "    print(confusion_matrix(y_test, y_pred))\n",
     "\n",
-    "    # Feature Importance Plot\n",
-    "    importance = pd.Series(model.feature_importances_, index=features)\n",
+    "    # Feature importance plot\n",
+    "    importance = pd.Series(model.feature_importances_, index=feature_names)\n",
     "    plt.figure(figsize=(8, 5))\n",
     "    sns.barplot(x=importance, y=importance.index)\n",
     "    plt.title(\"Feature Importance\")\n",
@@ -135,12 +144,24 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "# Main Execution\n",
-    "if __name__ == \"__main__\":\n",
+    "# Main\n",
+    "def main():\n",
     "    df = generate_data()\n",
     "    df = label_data(df)\n",
     "    df = engineer_features(df)\n",
-    "    train_model(df)\n"
+    "\n",
+    "    feature_cols = ['age_null', 'salary_null', 'dept_null', 'age_out_of_range', 'salary_negative']\n",
+    "    X = df[feature_cols]\n",
+    "    y = df['quality_issue']\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "    model = train_model(X_train, y_train)\n",
+    "    evaluate_model(model, X_test, y_test, feature_cols)\n",
+    "\n",
+    "# Run pipeline\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
