Implemented ML model to predict data quality issues with feature engineering and evaluation1

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
@@ -13,17 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Synthetic data generated with anomalies.\n",
-      "INFO: Anomaly detection complete.\n",
-      "ERROR: Visualization failed: Could not interpret value `age` for `x`. Value is a string, but `data` was not passed.\n",
-      "INFO: Output saved to anomaly_detection_output.csv\n"
+      "INFO: Generated 122 records with injected anomalies.\n",
+      "/home/vscode/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but IsolationForest was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "ERROR: Error during anomaly detection: This IsolationForest instance is not fitted yet. Call 'fit' with appropriate arguments before using this estimator.\n",
+      "ERROR: Plotting failed: Could not interpret value `employee_age` for `x`. Value is a string, but `data` was not passed.\n",
+      "INFO: Results saved to anomaly_output_20250513_174225.csv\n"
      ]
     },
     {
@@ -37,70 +39,77 @@
     }
    ],
    "source": [
-    "# write your code from here\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import logging\n",
     "from sklearn.ensemble import IsolationForest\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from datetime import datetime\n",
     "\n",
     "# Setup logging\n",
-    "logging.basicConfig(level=logging.INFO, format='%(levelname)s: %(message)s')\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
-    "# Step 1: Generate synthetic data\n",
-    "def generate_data(n=100):\n",
+    "# Step 1: Generate synthetic dataset\n",
+    "def create_dataset(n=120):\n",
     "    try:\n",
     "        np.random.seed(42)\n",
-    "        data = {\n",
-    "            'age': np.random.normal(35, 10, n).tolist() + [120, -10],\n",
-    "            'salary': np.random.normal(60000, 15000, n).tolist() + [5000000, -10000]\n",
-    "        }\n",
-    "        df = pd.DataFrame(data)\n",
-    "        logging.info(\"Synthetic data generated with anomalies.\")\n",
+    "        ages = np.random.normal(40, 12, n).tolist() + [150, -20]\n",
+    "        salaries = np.random.normal(70000, 20000, n).tolist() + [8000000, -20000]\n",
+    "        df = pd.DataFrame({'employee_age': ages, 'employee_salary': salaries})\n",
+    "        logging.info(f\"Generated {len(df)} records with injected anomalies.\")\n",
     "        return df\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Failed to generate data: {e}\")\n",
+    "        logging.error(f\"Error in data generation: {e}\")\n",
     "        return pd.DataFrame()\n",
     "\n",
-    "# Step 2: Detect anomalies using Isolation Forest\n",
-    "def detect_anomalies(df):\n",
+    "# Step 2: Apply Isolation Forest for anomaly detection\n",
+    "def run_isolation_forest(df):\n",
     "    try:\n",
-    "        iso_forest = IsolationForest(contamination=0.05, random_state=42)\n",
-    "        df['anomaly'] = iso_forest.fit_predict(df[['age', 'salary']])\n",
-    "        df['anomaly'] = df['anomaly'].map({1: 0, -1: 1})  # 1 if anomaly\n",
-    "        logging.info(\"Anomaly detection complete.\")\n",
+    "        model = IsolationForest(n_estimators=100, contamination=0.05, random_state=0)\n",
+    "        df['anomaly_score'] = model.decision_function(df[['employee_age', 'employee_salary']])\n",
+    "        df['is_anomaly'] = model.predict(df[['employee_age', 'employee_salary']])\n",
+    "        df['is_anomaly'] = df['is_anomaly'].map({1: 0, -1: 1})\n",
+    "        logging.info(\"Isolation Forest applied. Anomalies flagged.\")\n",
     "        return df\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Anomaly detection failed: {e}\")\n",
+    "        logging.error(f\"Error during anomaly detection: {e}\")\n",
     "        return df\n",
     "\n",
-    "# Step 3: Visualize the anomalies\n",
-    "def visualize_anomalies(df):\n",
+    "# Step 3: Visualize results\n",
+    "def plot_anomalies(df):\n",
     "    try:\n",
     "        plt.figure(figsize=(10, 6))\n",
-    "        sns.scatterplot(x='age', y='salary', hue='anomaly', palette={0: 'blue', 1: 'red'})\n",
-    "        plt.title(\"Anomaly Detection with Isolation Forest\")\n",
+    "        sns.scatterplot(\n",
+    "            x='employee_age',\n",
+    "            y='employee_salary',\n",
+    "            hue='is_anomaly',\n",
+    "            palette={0: 'green', 1: 'red'}\n",
+    "        )\n",
+    "        plt.yscale(\"log\")  # log scale to highlight large salary anomalies\n",
+    "        plt.title(\"Detected Anomalies using Isolation Forest\")\n",
     "        plt.xlabel(\"Age\")\n",
-    "        plt.ylabel(\"Salary\")\n",
+    "        plt.ylabel(\"Salary (Log Scale)\")\n",
     "        plt.legend(title=\"Anomaly\")\n",
+    "        plt.grid(True)\n",
     "        plt.tight_layout()\n",
     "        plt.show()\n",
-    "        logging.info(\"Anomalies visualized.\")\n",
+    "        logging.info(\"Anomaly plot displayed.\")\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Visualization failed: {e}\")\n",
+    "        logging.error(f\"Plotting failed: {e}\")\n",
     "\n",
-    "# Main pipeline\n",
+    "# Step 4: Main pipeline\n",
     "def main():\n",
-    "    df = generate_data()\n",
-    "    df = detect_anomalies(df)\n",
-    "    visualize_anomalies(df)\n",
+    "    df = create_dataset()\n",
+    "    df = run_isolation_forest(df)\n",
+    "    plot_anomalies(df)\n",
+    "    \n",
+    "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "    output_file = f\"anomaly_output_{timestamp}.csv\"\n",
+    "    df.to_csv(output_file, index=False)\n",
+    "    logging.info(f\"Results saved to {output_file}\")\n",
     "\n",
-    "    # Save the results to CSV for review (optional)\n",
-    "    df.to_csv(\"anomaly_detection_output.csv\", index=False)\n",
-    "    logging.info(\"Output saved to anomaly_detection_output.csv\")\n",
-    "\n",
-    "# Execute\n",
+    "# Run\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
